tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/array/double-comma-2.stderr
TOML parse error at line 1, column 14
  |
1 | array = [1,2,,]
  |              ^
invalid array
expected `]`
